parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> WHILE ( condition ) instruction
Rule 7     instruction -> FOR var = expression : expression instruction
Rule 8     instruction -> IF ( condition ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF ( condition ) instruction  [precedence=nonassoc, level=1]
Rule 10    instruction -> assignment_instruction ;
Rule 11    instruction -> reserved_instruction ;
Rule 12    instruction -> { instructions }
Rule 13    reserved_instruction -> PRINT expression_list
Rule 14    reserved_instruction -> RETURN expression_list
Rule 15    reserved_instruction -> CONTINUE
Rule 16    reserved_instruction -> BREAK
Rule 17    expression_list -> expression
Rule 18    expression_list -> expression_list , expression
Rule 19    assignment_instruction -> matrix_idx assignment_operator expression
Rule 20    assignment_instruction -> var assignment_operator expression
Rule 21    assignment_operator -> DIVASSIGN  [precedence=right, level=9]
Rule 22    assignment_operator -> MULTASSIGN  [precedence=right, level=9]
Rule 23    assignment_operator -> SUBASSIGN  [precedence=right, level=9]
Rule 24    assignment_operator -> ADDASSIGN  [precedence=right, level=9]
Rule 25    assignment_operator -> =
Rule 26    expression -> variable
Rule 27    expression -> ONES ( expression_list )
Rule 28    expression -> ZEROS ( expression_list )
Rule 29    expression -> EYE ( expression_list )
Rule 30    expression -> vector
Rule 31    expression -> matrix
Rule 32    expression -> expression '  [precedence=left, level=8]
Rule 33    expression -> - expression  [precedence=left, level=4]
Rule 34    expression -> expression DOTDIV expression  [precedence=left, level=7]
Rule 35    expression -> expression DOTMULT expression  [precedence=left, level=7]
Rule 36    expression -> expression DOTSUB expression  [precedence=left, level=5]
Rule 37    expression -> expression DOTADD expression  [precedence=left, level=5]
Rule 38    expression -> expression / expression  [precedence=left, level=6]
Rule 39    expression -> expression * expression  [precedence=left, level=6]
Rule 40    expression -> expression - expression  [precedence=left, level=4]
Rule 41    expression -> expression + expression  [precedence=left, level=4]
Rule 42    var -> ID
Rule 43    condition -> expression GE expression  [precedence=nonassoc, level=3]
Rule 44    condition -> expression LE expression  [precedence=nonassoc, level=3]
Rule 45    condition -> expression GT expression  [precedence=nonassoc, level=3]
Rule 46    condition -> expression LT expression  [precedence=nonassoc, level=3]
Rule 47    condition -> expression NOTEQUAL expression  [precedence=nonassoc, level=3]
Rule 48    condition -> expression EQUAL expression  [precedence=nonassoc, level=3]
Rule 49    matrix -> [ vectors ]
Rule 50    vectors -> vector
Rule 51    vectors -> vectors , vector
Rule 52    vector -> [ variables ]
Rule 53    variables -> variable
Rule 54    variables -> variables , variable
Rule 55    variable -> string
Rule 56    variable -> matrix_idx
Rule 57    variable -> number
Rule 58    variable -> var
Rule 59    number -> FLOAT
Rule 60    number -> INT
Rule 61    string -> STRING
Rule 62    matrix_idx -> var [ variables ]

Terminals, with rules where they appear:

'                    : 32
(                    : 6 8 9 27 28 29
)                    : 6 8 9 27 28 29
*                    : 39
+                    : 41
,                    : 18 51 54
-                    : 33 40
/                    : 38
:                    : 7
;                    : 10 11
=                    : 7 25
ADDASSIGN            : 24
BREAK                : 16
CONTINUE             : 15
DIVASSIGN            : 21
DOTADD               : 37
DOTDIV               : 34
DOTMULT              : 35
DOTSUB               : 36
ELSE                 : 8
EQUAL                : 48
EYE                  : 29
FLOAT                : 59
FOR                  : 7
GE                   : 43
GT                   : 45
ID                   : 42
IF                   : 8 9
INT                  : 60
LE                   : 44
LT                   : 46
MULTASSIGN           : 22
NOTEQUAL             : 47
ONES                 : 27
PRINT                : 13
RETURN               : 14
STRING               : 61
SUBASSIGN            : 23
WHILE                : 6
ZEROS                : 28
[                    : 49 52 62
]                    : 49 52 62
error                : 
{                    : 12
}                    : 12

Nonterminals, with rules where they appear:

assignment_instruction : 10
assignment_operator  : 19 20
condition            : 6 8 9
expression           : 7 7 17 18 19 20 32 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 43 43 44 44 45 45 46 46 47 47 48 48
expression_list      : 13 14 18 27 28 29
instruction          : 4 5 6 7 8 8 9
instructions         : 3 5 12
instructions_opt     : 1
matrix               : 31
matrix_idx           : 19 56
number               : 57
program              : 0
reserved_instruction : 11
string               : 55
var                  : 7 20 58 62
variable             : 26 53 54
variables            : 52 54 62
vector               : 30 50 51
vectors              : 49 51


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . matrix_idx assignment_operator expression
    (20) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (62) matrix_idx -> . var [ variables ]
    (42) var -> . ID
    $end            reduce using rule 2 (instructions_opt -> .)
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 13
    RETURN          shift and go to state 14
    CONTINUE        shift and go to state 15
    BREAK           shift and go to state 16
    ID              shift and go to state 17

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    matrix_idx                     shift and go to state 12

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . matrix_idx assignment_operator expression
    (20) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (62) matrix_idx -> . var [ variables ]
    (42) var -> . ID
    $end            reduce using rule 3 (instructions_opt -> instructions .)
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 13
    RETURN          shift and go to state 14
    CONTINUE        shift and go to state 15
    BREAK           shift and go to state 16
    ID              shift and go to state 17

    instruction                    shift and go to state 18
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    matrix_idx                     shift and go to state 12

state 4

    (4) instructions -> instruction .
    WHILE           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    {               reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> WHILE . ( condition ) instruction
    (               shift and go to state 19


state 6

    (7) instruction -> FOR . var = expression : expression instruction
    (42) var -> . ID
    ID              shift and go to state 17

    var                            shift and go to state 20

state 7

    (20) assignment_instruction -> var . assignment_operator expression
    (62) matrix_idx -> var . [ variables ]
    (21) assignment_operator -> . DIVASSIGN
    (22) assignment_operator -> . MULTASSIGN
    (23) assignment_operator -> . SUBASSIGN
    (24) assignment_operator -> . ADDASSIGN
    (25) assignment_operator -> . =
    [               shift and go to state 22
    DIVASSIGN       shift and go to state 23
    MULTASSIGN      shift and go to state 24
    SUBASSIGN       shift and go to state 25
    ADDASSIGN       shift and go to state 26
    =               shift and go to state 27

    assignment_operator            shift and go to state 21

state 8

    (8) instruction -> IF . ( condition ) instruction ELSE instruction
    (9) instruction -> IF . ( condition ) instruction
    (               shift and go to state 28


state 9

    (10) instruction -> assignment_instruction . ;
    ;               shift and go to state 29


state 10

    (11) instruction -> reserved_instruction . ;
    ;               shift and go to state 30


state 11

    (12) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . matrix_idx assignment_operator expression
    (20) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (62) matrix_idx -> . var [ variables ]
    (42) var -> . ID
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 13
    RETURN          shift and go to state 14
    CONTINUE        shift and go to state 15
    BREAK           shift and go to state 16
    ID              shift and go to state 17

    instructions                   shift and go to state 31
    instruction                    shift and go to state 4
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    matrix_idx                     shift and go to state 12

state 12

    (19) assignment_instruction -> matrix_idx . assignment_operator expression
    (21) assignment_operator -> . DIVASSIGN
    (22) assignment_operator -> . MULTASSIGN
    (23) assignment_operator -> . SUBASSIGN
    (24) assignment_operator -> . ADDASSIGN
    (25) assignment_operator -> . =
    DIVASSIGN       shift and go to state 23
    MULTASSIGN      shift and go to state 24
    SUBASSIGN       shift and go to state 25
    ADDASSIGN       shift and go to state 26
    =               shift and go to state 27

    assignment_operator            shift and go to state 32

state 13

    (13) reserved_instruction -> PRINT . expression_list
    (17) expression_list -> . expression
    (18) expression_list -> . expression_list , expression
    (26) expression -> . variable
    (27) expression -> . ONES ( expression_list )
    (28) expression -> . ZEROS ( expression_list )
    (29) expression -> . EYE ( expression_list )
    (30) expression -> . vector
    (31) expression -> . matrix
    (32) expression -> . expression '
    (33) expression -> . - expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression DOTMULT expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTADD expression
    (38) expression -> . expression / expression
    (39) expression -> . expression * expression
    (40) expression -> . expression - expression
    (41) expression -> . expression + expression
    (55) variable -> . string
    (56) variable -> . matrix_idx
    (57) variable -> . number
    (58) variable -> . var
    (52) vector -> . [ variables ]
    (49) matrix -> . [ vectors ]
    (61) string -> . STRING
    (62) matrix_idx -> . var [ variables ]
    (59) number -> . FLOAT
    (60) number -> . INT
    (42) var -> . ID
    ONES            shift and go to state 36
    ZEROS           shift and go to state 37
    EYE             shift and go to state 38
    -               shift and go to state 41
    [               shift and go to state 46
    STRING          shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    expression_list                shift and go to state 33
    expression                     shift and go to state 34
    variable                       shift and go to state 35
    vector                         shift and go to state 39
    matrix                         shift and go to state 40
    string                         shift and go to state 42
    matrix_idx                     shift and go to state 43
    number                         shift and go to state 44
    var                            shift and go to state 45

state 14

    (14) reserved_instruction -> RETURN . expression_list
    (17) expression_list -> . expression
    (18) expression_list -> . expression_list , expression
    (26) expression -> . variable
    (27) expression -> . ONES ( expression_list )
    (28) expression -> . ZEROS ( expression_list )
    (29) expression -> . EYE ( expression_list )
    (30) expression -> . vector
    (31) expression -> . matrix
    (32) expression -> . expression '
    (33) expression -> . - expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression DOTMULT expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTADD expression
    (38) expression -> . expression / expression
    (39) expression -> . expression * expression
    (40) expression -> . expression - expression
    (41) expression -> . expression + expression
    (55) variable -> . string
    (56) variable -> . matrix_idx
    (57) variable -> . number
    (58) variable -> . var
    (52) vector -> . [ variables ]
    (49) matrix -> . [ vectors ]
    (61) string -> . STRING
    (62) matrix_idx -> . var [ variables ]
    (59) number -> . FLOAT
    (60) number -> . INT
    (42) var -> . ID
    ONES            shift and go to state 36
    ZEROS           shift and go to state 37
    EYE             shift and go to state 38
    -               shift and go to state 41
    [               shift and go to state 46
    STRING          shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    expression_list                shift and go to state 50
    expression                     shift and go to state 34
    variable                       shift and go to state 35
    vector                         shift and go to state 39
    matrix                         shift and go to state 40
    string                         shift and go to state 42
    matrix_idx                     shift and go to state 43
    number                         shift and go to state 44
    var                            shift and go to state 45

state 15

    (15) reserved_instruction -> CONTINUE .
    ;               reduce using rule 15 (reserved_instruction -> CONTINUE .)


state 16

    (16) reserved_instruction -> BREAK .
    ;               reduce using rule 16 (reserved_instruction -> BREAK .)


state 17

    (42) var -> ID .
    [               reduce using rule 42 (var -> ID .)
    DIVASSIGN       reduce using rule 42 (var -> ID .)
    MULTASSIGN      reduce using rule 42 (var -> ID .)
    SUBASSIGN       reduce using rule 42 (var -> ID .)
    ADDASSIGN       reduce using rule 42 (var -> ID .)
    =               reduce using rule 42 (var -> ID .)
    '               reduce using rule 42 (var -> ID .)
    DOTDIV          reduce using rule 42 (var -> ID .)
    DOTMULT         reduce using rule 42 (var -> ID .)
    DOTSUB          reduce using rule 42 (var -> ID .)
    DOTADD          reduce using rule 42 (var -> ID .)
    /               reduce using rule 42 (var -> ID .)
    *               reduce using rule 42 (var -> ID .)
    -               reduce using rule 42 (var -> ID .)
    +               reduce using rule 42 (var -> ID .)
    ,               reduce using rule 42 (var -> ID .)
    ;               reduce using rule 42 (var -> ID .)
    GE              reduce using rule 42 (var -> ID .)
    LE              reduce using rule 42 (var -> ID .)
    GT              reduce using rule 42 (var -> ID .)
    LT              reduce using rule 42 (var -> ID .)
    NOTEQUAL        reduce using rule 42 (var -> ID .)
    EQUAL           reduce using rule 42 (var -> ID .)
    ]               reduce using rule 42 (var -> ID .)
    :               reduce using rule 42 (var -> ID .)
    )               reduce using rule 42 (var -> ID .)
    WHILE           reduce using rule 42 (var -> ID .)
    FOR             reduce using rule 42 (var -> ID .)
    IF              reduce using rule 42 (var -> ID .)
    {               reduce using rule 42 (var -> ID .)
    PRINT           reduce using rule 42 (var -> ID .)
    RETURN          reduce using rule 42 (var -> ID .)
    CONTINUE        reduce using rule 42 (var -> ID .)
    BREAK           reduce using rule 42 (var -> ID .)
    ID              reduce using rule 42 (var -> ID .)


state 18

    (5) instructions -> instructions instruction .
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    {               reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 19

    (6) instruction -> WHILE ( . condition ) instruction
    (43) condition -> . expression GE expression
    (44) condition -> . expression LE expression
    (45) condition -> . expression GT expression
    (46) condition -> . expression LT expression
    (47) condition -> . expression NOTEQUAL expression
    (48) condition -> . expression EQUAL expression
    (26) expression -> . variable
    (27) expression -> . ONES ( expression_list )
    (28) expression -> . ZEROS ( expression_list )
    (29) expression -> . EYE ( expression_list )
    (30) expression -> . vector
    (31) expression -> . matrix
    (32) expression -> . expression '
    (33) expression -> . - expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression DOTMULT expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTADD expression
    (38) expression -> . expression / expression
    (39) expression -> . expression * expression
    (40) expression -> . expression - expression
    (41) expression -> . expression + expression
    (55) variable -> . string
    (56) variable -> . matrix_idx
    (57) variable -> . number
    (58) variable -> . var
    (52) vector -> . [ variables ]
    (49) matrix -> . [ vectors ]
    (61) string -> . STRING
    (62) matrix_idx -> . var [ variables ]
    (59) number -> . FLOAT
    (60) number -> . INT
    (42) var -> . ID
    ONES            shift and go to state 36
    ZEROS           shift and go to state 37
    EYE             shift and go to state 38
    -               shift and go to state 41
    [               shift and go to state 46
    STRING          shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    condition                      shift and go to state 51
    expression                     shift and go to state 52
    variable                       shift and go to state 35
    vector                         shift and go to state 39
    matrix                         shift and go to state 40
    string                         shift and go to state 42
    matrix_idx                     shift and go to state 43
    number                         shift and go to state 44
    var                            shift and go to state 45

state 20

    (7) instruction -> FOR var . = expression : expression instruction
    =               shift and go to state 53


state 21

    (20) assignment_instruction -> var assignment_operator . expression
    (26) expression -> . variable
    (27) expression -> . ONES ( expression_list )
    (28) expression -> . ZEROS ( expression_list )
    (29) expression -> . EYE ( expression_list )
    (30) expression -> . vector
    (31) expression -> . matrix
    (32) expression -> . expression '
    (33) expression -> . - expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression DOTMULT expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTADD expression
    (38) expression -> . expression / expression
    (39) expression -> . expression * expression
    (40) expression -> . expression - expression
    (41) expression -> . expression + expression
    (55) variable -> . string
    (56) variable -> . matrix_idx
    (57) variable -> . number
    (58) variable -> . var
    (52) vector -> . [ variables ]
    (49) matrix -> . [ vectors ]
    (61) string -> . STRING
    (62) matrix_idx -> . var [ variables ]
    (59) number -> . FLOAT
    (60) number -> . INT
    (42) var -> . ID
    ONES            shift and go to state 36
    ZEROS           shift and go to state 37
    EYE             shift and go to state 38
    -               shift and go to state 41
    [               shift and go to state 46
    STRING          shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    var                            shift and go to state 45
    expression                     shift and go to state 54
    variable                       shift and go to state 35
    vector                         shift and go to state 39
    matrix                         shift and go to state 40
    string                         shift and go to state 42
    matrix_idx                     shift and go to state 43
    number                         shift and go to state 44

state 22

    (62) matrix_idx -> var [ . variables ]
    (53) variables -> . variable
    (54) variables -> . variables , variable
    (55) variable -> . string
    (56) variable -> . matrix_idx
    (57) variable -> . number
    (58) variable -> . var
    (61) string -> . STRING
    (62) matrix_idx -> . var [ variables ]
    (59) number -> . FLOAT
    (60) number -> . INT
    (42) var -> . ID
    STRING          shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    var                            shift and go to state 45
    variables                      shift and go to state 55
    variable                       shift and go to state 56
    string                         shift and go to state 42
    matrix_idx                     shift and go to state 43
    number                         shift and go to state 44

state 23

    (21) assignment_operator -> DIVASSIGN .
    ONES            reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    ZEROS           reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    EYE             reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    -               reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    [               reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    STRING          reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    FLOAT           reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    INT             reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    ID              reduce using rule 21 (assignment_operator -> DIVASSIGN .)


state 24

    (22) assignment_operator -> MULTASSIGN .
    ONES            reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    ZEROS           reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    EYE             reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    -               reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    [               reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    STRING          reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    FLOAT           reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    INT             reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    ID              reduce using rule 22 (assignment_operator -> MULTASSIGN .)


state 25

    (23) assignment_operator -> SUBASSIGN .
    ONES            reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    ZEROS           reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    EYE             reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    -               reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    [               reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    STRING          reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    FLOAT           reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    INT             reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    ID              reduce using rule 23 (assignment_operator -> SUBASSIGN .)


state 26

    (24) assignment_operator -> ADDASSIGN .
    ONES            reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    ZEROS           reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    EYE             reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    -               reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    [               reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    STRING          reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    FLOAT           reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    INT             reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    ID              reduce using rule 24 (assignment_operator -> ADDASSIGN .)


state 27

    (25) assignment_operator -> = .
    ONES            reduce using rule 25 (assignment_operator -> = .)
    ZEROS           reduce using rule 25 (assignment_operator -> = .)
    EYE             reduce using rule 25 (assignment_operator -> = .)
    -               reduce using rule 25 (assignment_operator -> = .)
    [               reduce using rule 25 (assignment_operator -> = .)
    STRING          reduce using rule 25 (assignment_operator -> = .)
    FLOAT           reduce using rule 25 (assignment_operator -> = .)
    INT             reduce using rule 25 (assignment_operator -> = .)
    ID              reduce using rule 25 (assignment_operator -> = .)


state 28

    (8) instruction -> IF ( . condition ) instruction ELSE instruction
    (9) instruction -> IF ( . condition ) instruction
    (43) condition -> . expression GE expression
    (44) condition -> . expression LE expression
    (45) condition -> . expression GT expression
    (46) condition -> . expression LT expression
    (47) condition -> . expression NOTEQUAL expression
    (48) condition -> . expression EQUAL expression
    (26) expression -> . variable
    (27) expression -> . ONES ( expression_list )
    (28) expression -> . ZEROS ( expression_list )
    (29) expression -> . EYE ( expression_list )
    (30) expression -> . vector
    (31) expression -> . matrix
    (32) expression -> . expression '
    (33) expression -> . - expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression DOTMULT expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTADD expression
    (38) expression -> . expression / expression
    (39) expression -> . expression * expression
    (40) expression -> . expression - expression
    (41) expression -> . expression + expression
    (55) variable -> . string
    (56) variable -> . matrix_idx
    (57) variable -> . number
    (58) variable -> . var
    (52) vector -> . [ variables ]
    (49) matrix -> . [ vectors ]
    (61) string -> . STRING
    (62) matrix_idx -> . var [ variables ]
    (59) number -> . FLOAT
    (60) number -> . INT
    (42) var -> . ID
    ONES            shift and go to state 36
    ZEROS           shift and go to state 37
    EYE             shift and go to state 38
    -               shift and go to state 41
    [               shift and go to state 46
    STRING          shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    condition                      shift and go to state 57
    expression                     shift and go to state 52
    variable                       shift and go to state 35
    vector                         shift and go to state 39
    matrix                         shift and go to state 40
    string                         shift and go to state 42
    matrix_idx                     shift and go to state 43
    number                         shift and go to state 44
    var                            shift and go to state 45

state 29

    (10) instruction -> assignment_instruction ; .
    WHILE           reduce using rule 10 (instruction -> assignment_instruction ; .)
    FOR             reduce using rule 10 (instruction -> assignment_instruction ; .)
    IF              reduce using rule 10 (instruction -> assignment_instruction ; .)
    {               reduce using rule 10 (instruction -> assignment_instruction ; .)
    PRINT           reduce using rule 10 (instruction -> assignment_instruction ; .)
    RETURN          reduce using rule 10 (instruction -> assignment_instruction ; .)
    CONTINUE        reduce using rule 10 (instruction -> assignment_instruction ; .)
    BREAK           reduce using rule 10 (instruction -> assignment_instruction ; .)
    ID              reduce using rule 10 (instruction -> assignment_instruction ; .)
    $end            reduce using rule 10 (instruction -> assignment_instruction ; .)
    }               reduce using rule 10 (instruction -> assignment_instruction ; .)
    ELSE            reduce using rule 10 (instruction -> assignment_instruction ; .)


state 30

    (11) instruction -> reserved_instruction ; .
    WHILE           reduce using rule 11 (instruction -> reserved_instruction ; .)
    FOR             reduce using rule 11 (instruction -> reserved_instruction ; .)
    IF              reduce using rule 11 (instruction -> reserved_instruction ; .)
    {               reduce using rule 11 (instruction -> reserved_instruction ; .)
    PRINT           reduce using rule 11 (instruction -> reserved_instruction ; .)
    RETURN          reduce using rule 11 (instruction -> reserved_instruction ; .)
    CONTINUE        reduce using rule 11 (instruction -> reserved_instruction ; .)
    BREAK           reduce using rule 11 (instruction -> reserved_instruction ; .)
    ID              reduce using rule 11 (instruction -> reserved_instruction ; .)
    $end            reduce using rule 11 (instruction -> reserved_instruction ; .)
    }               reduce using rule 11 (instruction -> reserved_instruction ; .)
    ELSE            reduce using rule 11 (instruction -> reserved_instruction ; .)


state 31

    (12) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . matrix_idx assignment_operator expression
    (20) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (62) matrix_idx -> . var [ variables ]
    (42) var -> . ID
    }               shift and go to state 58
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 13
    RETURN          shift and go to state 14
    CONTINUE        shift and go to state 15
    BREAK           shift and go to state 16
    ID              shift and go to state 17

    instruction                    shift and go to state 18
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    matrix_idx                     shift and go to state 12

state 32

    (19) assignment_instruction -> matrix_idx assignment_operator . expression
    (26) expression -> . variable
    (27) expression -> . ONES ( expression_list )
    (28) expression -> . ZEROS ( expression_list )
    (29) expression -> . EYE ( expression_list )
    (30) expression -> . vector
    (31) expression -> . matrix
    (32) expression -> . expression '
    (33) expression -> . - expression
    (34) expression -> . expression DOTDIV expression
    (35) expression -> . expression DOTMULT expression
    (36) expression -> . expression DOTSUB expression
    (37) expression -> . expression DOTADD expression
    (38) expression -> . expression / expression
    (39) expression -> . expression * expression
    (40) expression -> . expression - expression
    (41) expression -> . expression + expression
    (55) variable -> . string
    (56) variable -> . matrix_idx
    (57) variable -> . number
    (58) variable -> . var
    (52) vector -> . [ variables ]
    (49) matrix -> . [ vectors ]
    (61) string -> . STRING
    (62) matrix_idx -> . var [ variables ]
    (59) number -> . FLOAT
    (60) number -> . INT
    (42) var -> . ID
    ONES            shift and go to state 36
    ZEROS           shift and go to state 37
    EYE             shift and go to state 38
    -               shift and go to state 41
    [               shift and go to state 46
    STRING          shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    matrix_idx                     shift and go to state 43
    expression                     shift and go to state 59
    variable                       shift and go to state 35
    vector                         shift and go to state 39
    matrix                         shift and go to state 40
    string                         shift and go to state 42
    number                         shift and go to state 44
    var                            shift and go to state 45

state 33

    (13) reserved_instruction -> PRINT expression_list .
    (18) expression_list -> expression_list . , expression
    ;               reduce using rule 13 (reserved_instruction -> PRINT expression_list .)
    ,               shift and go to state 60


state 34
